--- a/.github/workflows/periodic-release.yml
+++ b/.github/workflows/periodic-release.yml
@@ -2,7 +2,7 @@ name: release
 
 on:
   repository_dispatch:
-    types: [release]
+    types: [periodic-release]
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '*/15 * * * *'
